Fixa stavning av META

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
             Därefter är det fritt fram att registrera kvitton i systemet.
         </p>
 
-        <p>I Cashflow laddar du upp kvitton för dina utlägg digitalt. Detta för att förenkla sektionens ekonomiska arbete. Tyvärr, på grund av hur lagstiftningen kring bokföring ser ut, behöver man fortfarande lämna in kvittot fysiskt i kvittopärmen som finns i Meta.</p>
+        <p>I Cashflow laddar du upp kvitton för dina utlägg digitalt. Detta för att förenkla sektionens ekonomiska arbete. Tyvärr, på grund av hur lagstiftningen kring bokföring ser ut, behöver man fortfarande lämna in kvittot fysiskt i kvittopärmen som finns i META.</p>
 
         <p>När du laddat upp ett kvitto kan du följa kvittot från din användarsida och se när det är godkänt samt när det är utbetalat. På så sätt kan du enkelt jämföra dina bankhändelser med Cashflow och vara säker på att du fått tillbaka allt.</p>
 
