--- a/templates/admin/pay/overview.html
+++ b/templates/admin/pay/overview.html
@@ -42,7 +42,7 @@
             </tr>
             <tr class="footer-row" v-if="idx == expenses.length - 1 || expenses[idx + 1].owner_username != expense.owner_username">
                 <td colspan="2">Summa</td>
-                <td v-html="expenses.filter(e => e.owner == expense.owner && (committee == false || e.committees.indexOf(committee) > -1)).map(x => x.amount).reduce((a,b) => (a+b),0) + ' kr'"></td>
+                <td v-html="expenses.filter(e => e.owner == expense.owner && (committee == false || e.committees.indexOf(committee) > -1)).map(x => x.amount).reduce((a,b) => (a+b),0).toFixed(2) + ' kr'"></td>
                 <td>
                     <div style="float:right" v-tooltip="{content:'Markera alla'}" class="checkbox">
                         <input :id="expense.owner" v-on:change="e => trim(expense.owner, e)" class="select-expense" type="checkbox" value="{{ expense.id }}" name="expense">
