Change button color for delete confirmation

--- a/templates/expenses/delete.html
+++ b/templates/expenses/delete.html
@@ -9,7 +9,7 @@
     {% csrf_token %}
     <div class="form-group">
         <div class="col-sm-offset-10 col-sm-2">
-            <button type="submit" class="button primary-action btn-color">Ta bort kvittot</button>
+            <button type="submit" class="button btn-danger">Ta bort kvittot</button>
         </div>
     </div>
 </form>
