--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -125,7 +125,7 @@
                     [[expense.confirmed_by]]  ([[expense.confirmed_date]])
                 </td>
                 <td v-else>
-                    {% if user.profile.is_admin %}
+                    {% if user.profile.may_confirm %}
                         <form v-on:submit.prevent="conf(expense)" method="POST" :action="'expense/' + expense.id + '/confirm/'">
                             {% csrf_token %}
                             <button class="theme-color btn-color" v-on:click="conf(expense, $event)">[[expense.btn_message]]</button>
