--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -15,9 +15,10 @@
         <h2>Mest Cashflowat</h2>
         <ol class="center">
             {% for user in highscore %}
-                <li><a href="{% url 'user-show' user.user.username %}">{{ user.user.get_full_name }}</a> ({{ user.total_amount|intcomma }} kr)</li>
+            <li><a href="{% url 'user-show' user.user.username %}">{{ user.user.get_full_name }}</a> ({{ user.total_amount|intcomma }} kr)</li>
             {% endfor %}
         </ol>
+        <h4>OBS. Räknar bara med utbetalningar mindre än 30 000 kr</h4>
 
         <div class="divide"></div>
 
