--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -18,7 +18,7 @@
             <li><a href="{% url 'user-show' user.user.username %}">{{ user.user.get_full_name }}</a> ({{ user.total_amount|intcomma }} kr)</li>
             {% endfor %}
         </ol>
-        <p>OBS. Räknar bara med utbetalningar mindre än 20 000 kr</p>
+        <p>OBS. Räknar bara med utlägg mindre än 20 000 kr</p>
 
         <div class="divide"></div>
 
