Fix check being wrong color
Should now be visible. For example, the "attest" button has had a green check icon
with a green background icon. The check icon is now white instead

--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -451,7 +451,7 @@ input[type="file"] {
     color: inherit;
 }
 .fa-check {
-    color: rgb(33, 108, 42);
+    color: #fff;
 }
 .icon.spin i {
     -webkit-animation: spin 2s linear infinite;
