Only show reimbursements for this year

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -8,7 +8,7 @@
     <header>
         <div class="inner">
             <span class="label">Utbetalt i år</span>
-            <h2>{{ year }} kr</h2>
+            <h2>{{ year|intcomma }} kr</h2>
         </div>
     </header>
     <div id="content">
