Fix vue fetch link
Thanks to internet archive: https://web.archive.org/web/20220204175017/https://vuejs.org/js/vue.js

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,22 @@
     <meta name="theme-color" content="#216C2A">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
-    <script src="https://vuejs.org/js/vue.js"></script>
+    <!-- 
+    ▒▒▒▒▒▒▒▒▄▄▄▄▄▄▄▄▒▒▒▒▒▒▒▒
+    ▒▒▒▒▒▄█▀▀░░░░░░▀▀█▄▒▒▒▒▒
+    ▒▒▒▄█▀▄██▄░░░░░░░░▀█▄▒▒▒
+    ▒▒█▀░▀░░▄▀░░░░▄▀▀▀▀░▀█▒▒
+    ▒█▀░░░░███░░░░▄█▄░░░░▀█▒
+    ▒█░░░░░░▀░░░░░▀█▀░░░░░█▒
+    ▒█░░░░░░░░░░░░░░░░░░░░█▒
+    ▒█░░██▄░░▀▀▀▀▄▄░░░░░░░█▒
+    ▒▀█░█░█░░░▄▄▄▄▄░░░░░░█▀▒
+    ▒▒▀█▀░▀▀▀▀░▄▄▄▀░░░░▄█▀▒▒
+    ▒▒▒█░░░░░░▀█░░░░░▄█▀▒▒▒▒
+    ▒▒▒█▄░░░░░▀█▄▄▄█▀▀▒▒▒▒▒▒
+    ▒▒▒▒▀▀▀▀▀▀▀▒▒▒▒▒▒▒▒▒▒▒▒▒
+    -->
+    <script src="/static/vue.js"></script>
     <script src="https://unpkg.com/popper.js"></script>
     <script src="https://unpkg.com/v-tooltip"></script>
 
