--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -17,15 +17,18 @@
         <table>
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Verifikat</th>
                     <th>Beskrivning</th>
                     <th>Ägare</th>
                     <th>Nämnder</th>
                     <th class="right">Belopp</th>
+                    <th class="right">Transaktionsdatum</th>
                 </tr>
             </thead>
             {% for expense in expenses %}
                 <tr>
+                    <td class="no-wrap">{{ expense.id }}</td>
                     <td class="no-wrap"><a href="{% url 'expenses-show' expense.id %}">{{ expense.status }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
                     <td class="no-wrap"><a href="{% url 'user-show' expense.owner.user.username %}">{{ expense.owner }}</a></td>
@@ -34,6 +37,7 @@
                     {% endfor %}
                     </td>
                     <td class="right no-wrap">{{ expense.total_amount|intcomma }} kr</td>
+                    <td class="right no-wrap">{{ expense.expense_date }}</td>
                 </tr>
             {% endfor %}
             <tfoot>
