--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -9,6 +9,7 @@
         <table>
             <thead>
                 <tr>
+                    <th class="left">ID</th>
                     <th>Inköpt</th>
                     <th>Skapat</th>
                     <th>Beskrivning</th>
@@ -17,6 +18,7 @@
             </thead>
             {% for expense in non_attested_expenses %}
                 <tr>
+                    <td class="left">{{ expense.id }}</td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.expense_date|date:"Y-m-d" }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.created_date|date:"Y-m-d" }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
@@ -25,7 +27,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Det finns inga oattesterade kvitton!
+        Du har inga oattesterade kvitton!
     {% endif %}
     <br /><br />
     <h2>Attesterade kvitton</h2>
@@ -33,6 +35,7 @@
         <table>
             <thead>
                 <tr>
+                    <th class="left">ID</th>
                     <th>Inköpt</th>
                     <th>Skapat</th>
                     <th>Beskrivning</th>
@@ -41,6 +44,7 @@
             </thead>
             {% for expense in attested_expenses %}
                 <tr>
+                    <td class="left">{{ expense.id }}</td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.expense_date|date:"Y-m-d" }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.created_date|date:"Y-m-d" }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
@@ -49,7 +53,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Det finns inga kvitton som väntar på att betalas ut.
+        Du har inga kvitton som väntar på att betalas ut.
     {% endif %}
     <br /><br />
     <h2>Utbetalda kvitton</h2>
@@ -85,7 +89,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Det finns inga tidigare utbetalda kvitton.
+        Du har inga utbetalda kvitton.
     {% endif %}
 
 {% endblock %}
