revert: text on profile
Co-authored-by: Douglas Fischer <anakin_skryter@hotmail.se>

--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -27,7 +27,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Du har inga oattesterade kvitton!
+        Det finns inga oattesterade kvitton!
     {% endif %}
     <br /><br />
     <h2>Attesterade kvitton</h2>
@@ -53,7 +53,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Du har inga kvitton som väntar på att betalas ut.
+        Det finns inga kvitton som väntar på att betalas ut.
     {% endif %}
     <br /><br />
     <h2>Utbetalda kvitton</h2>
@@ -89,7 +89,7 @@
             {% endfor %}
         </table>
     {% else %}
-        Du har inga utbetalda kvitton.
+        Det finns inga tidigare utbetalda kvitton.
     {% endif %}
 
 {% endblock %}
